# router/app.go
@@ -2,7 +2,6 @@ package router
 
 import (
 	_ "getcharzp.cn/docs"
-	"getcharzp.cn/middlewares"
 	"getcharzp.cn/service"
 	"github.com/gin-gonic/gin"
 	swaggerfiles "github.com/swaggo/files"
@@ -32,15 +31,19 @@ func Router() *gin.Engine {
 	r.GET("/submit-list", service.GetSubmitList)
 
 	// 管理员私有方法
+	//authAdmin := r.Group("/admin", middlewares.AuthAdminCheck())
+	authAdmin := r.Group("/admin")
 	// 问题创建
-	r.POST("/problem-create", middlewares.AuthAdminCheck(), service.ProblemCreate)
+	authAdmin.POST("/problem-create", service.ProblemCreate)
+	// 问题修改
+	authAdmin.PUT("/problem-modify", service.ProblemModify)
 	// 分类列表
-	r.GET("/category-list", middlewares.AuthAdminCheck(), service.GetCategoryList)
+	authAdmin.GET("/category-list", service.GetCategoryList)
 	// 分类创建
-	r.POST("/category-create", middlewares.AuthAdminCheck(), service.CategoryCreate)
+	authAdmin.POST("/category-create", service.CategoryCreate)
 	// 分类修改
-	r.PUT("/category-modify", middlewares.AuthAdminCheck(), service.CategoryModify)
+	authAdmin.PUT("/category-modify", service.CategoryModify)
 	// 分类删除
-	r.DELETE("/category-delete", middlewares.AuthAdminCheck(), service.CategoryDelete)
+	authAdmin.DELETE("/category-delete", service.CategoryDelete)
 	return r
 }
